--- a/calc.html
+++ b/calc.html
@@ -117,6 +117,19 @@
             font-size: 14px;
             line-height: 1.5;
         }
+        .contact-info {
+            text-align: center;
+            color: #666;
+            font-size: 14px;
+            margin-bottom: 20px;
+        }
+        .contact-info a {
+            color: #2196F3;
+            text-decoration: none;
+        }
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
         .date-display {
             margin-top: 5px;
             font-size: 14px;
@@ -129,6 +142,9 @@
         <div class="disclaimer">
             <strong>הערה חשובה:</strong><br>
             מחשבון זה פועל באופן מקומי במכשיר המשתמש בלבד, אינו שולח או שומר מידע כלשהו, ועלול להכיל שגיאות או בעיות. המחשבון מבוסס על הסבר התגמול הרשמי ואינו קשור או מייצג את צה"ל.
+        </div>
+        <div class="contact-info">
+            לשאלות והצעות: <a href="mailto:avishay.c@gmail.com">avishay.c@gmail.com</a>
         </div>
         <h1>מחשבון תגמול מיוחד ונוסף</h1>
         <form id="bonusForm">
